[package]
name = "chemgraphics"
version = "0.1.0"
authors = ["DavidOConnor <david.alan.oconnor@gmail.com>"]

# [[bin]]
# name = "test"
# path = "src/main.rs"

[dependencies]
ndarray = "^0.11.2"
num = "^0.2.0"
vulkano = "^0.10.0"
vulkano-shader-derive = "^0.10.0"
vulkano-win = "^0.10.0"
winit = "^0.17.2"
time = "^0.1.37"